--- a/resources/ext.collection.offline/offline.less
+++ b/resources/ext.collection.offline/offline.less
@@ -1,68 +1,73 @@
-@import "mediawiki.ui/variables.less";
+@import 'mediawiki.ui/variables.less';
 
 .mw-book-tocitem-type-chapter {
-    font-size: 140%;
+	font-size: 140%;
 }
 .mw-book-toc li {
-    list-style: none;
-    font-size: 90%;
+	list-style: none;
+	font-size: 90%;
 }
 
 .mw-book-tocitem-type-chapter,
 .mw-book-tocitem-type-article,
 .mw-book-tocitem-type-section,
 .mw-book-tocitem-type-contributors {
-    break-inside: avoid;
+	break-inside: avoid;
 
-    a {
-        display: inline-flex;
-        width: 100%;
-        break-inside: avoid;
-        align-items: baseline;
+	a {
+		display: inline-flex;
+		width: 100%;
+		break-inside: avoid;
+		align-items: baseline;
 
-        &::before {
-            content: attr(data-mw-sectionnumber) '\00a0'; // nbsp
-        }
-        &::after {
-            flex-grow: 1;
-            align-self: flex-end;
-            text-align: right;
-            margin-left: 5px;
-            margin-right: 3px;
-            border-bottom: 1px dotted @colorText;
-            content: '\00a0';
-            // In the glorious future, this will add ToC numbers. See T169897.
-            // For now, they are added later via a PDF post-processing hack.
-            //content: target-counter(attr(href url), page)
-        }
-    }
+		&:before {
+			content: attr( data-mw-sectionnumber ) '\00a0'; // nbsp
+		}
+		&:after {
+			flex-grow: 1;
+			align-self: flex-end;
+			text-align: right;
+			margin-left: 5px;
+			margin-right: 3px;
+			border-bottom: 1px dotted @colorText;
+			content: '\00a0';
+			// In the glorious future, this will add ToC numbers. See T169897.
+			// For now, they are added later via a PDF post-processing hack.
+			//content: target-counter(attr(href url), page)
+		}
+	}
 }
 
 // Standard way of adding page numbers. See comment above.
 //@page :left {
-//    @bottom-left {
-//        content: counter(page);
-//    }
+//	@bottom-left {
+//		content: counter(page);
+//	}
 //}
 //@page :right {
-//    @bottom-right {
-//        content: counter(page);
-//    }
+//	@bottom-right {
+//		content: counter(page);
+//	}
 //}
 
-h1, h2, h3, h4, h5, h6 {
-    break-after: avoid;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	break-after: avoid;
 
-    &[data-mw-sectionnumber]::before {
-        content: attr(data-mw-sectionnumber) ' ';
-    }
+	&[data-mw-sectionnumber]:before {
+		content: attr( data-mw-sectionnumber ) ' ';
+	}
 }
 .mw-book-chapter {
-    break-before: page;
+	break-before: page;
 }
 
 // Hide "Retrieved from..." footer. Books are printed via a one-time URL
 // so it's not really useful.
 .printfooter {
-    display: none;
+	display: none;
 }
