--- a/templates/warning.mustache
+++ b/templates/warning.mustache
@@ -1,7 +1,16 @@
-<div class="warningbox">
-	<p>{{{text}}}</p>
-	<ul class="hlist">
-		<li><a href="https://www.mediawiki.org/wiki/Talk:Reading/Web/PDF_Functionality">{{feedback}}</a></li>
-		<li><a href="https://www.mediawiki.org/wiki/Reading/Web/PDF_Functionality">{{more}}</a></li>
-	</ul>
+<div class="collection-maintenance-box collection-warning-box">
+  <h5 class="collection-box-heading collection-icon-warning">{{warning_title}}</h5>
+  <p class="notice-text">
+    {{warning_text}}
+  </p>
+  <ul class="hlist">
+    <li><a href="https://www.mediawiki.org/wiki/Reading/Web/PDF_Functionality">{{warning_learn_more}}</a></li>
+  </ul>
+</div>
+
+<div class="collection-maintenance-box collection-notice-box">
+    <h5 class="collection-box-heading collection-icon-info">{{notice_title}}</h5>
+    <p class="notice-text">
+        {{{notice_text}}}
+    </p>
 </div>
