Disable the Download section on Manage Books page
Changes:
 - introduced new config variable $wgCollectionDisableDownloadSection
 which allows to dynamically disable/enable download section
 - added new styles to make the box looks like disabled
 - changed the JS/PHP logic to disable the form submit when
 $wgCollectionDisableDownloadSection variable is set to on
 - the download box is disabled by default

Bug: T175996
Change-Id: I06b8c3ac94470b4081b32257483ca5b281b22026

--- a/resources/ext.collection.bookcreator.styles/bookcreator.css
+++ b/resources/ext.collection.bookcreator.styles/bookcreator.css
@@ -126,3 +126,9 @@
 #coll-orderbox ul {
 	list-style: none;
 }
+
+.collection-box-disabled,
+.collection-box-disabled h2 {
+	color: #d2d2d2;
+	border-color: #eee;
+}
