--- a/templates/toc.mustache
+++ b/templates/toc.mustache
@@ -1,9 +1,12 @@
 {{#title?}}
+<div class="cover-page">
     <header>
         <h1>{{title}}</h1>
         {{#subtitle?}}<h2>{{subtitle}}</h2>{{/subtitle?}}
     </header>
+</div>
 {{/title?}}
+
 <nav class="mw-book-toc">
     <h1>{{toctitle}}</h1>
     <ul>
