Add images section
Concatenated book HTML now has the images section.

Bug: T175856
Change-Id: I7ef0444c474a904a2610c3960ac8524bacad67dd

--- a/resources/ext.collection.offline/offline.less
+++ b/resources/ext.collection.offline/offline.less
@@ -58,7 +58,8 @@
 	.mw-book-tocitem-type-chapter,
 	.mw-book-tocitem-type-article,
 	.mw-book-tocitem-type-section,
-	.mw-book-tocitem-type-contributors {
+	.mw-book-tocitem-type-contributors,
+	.mw-book-tocitem-type-images {
 		break-inside: avoid;
 
 		a {
