Add license info
Concatenated HTML has the license section now.

Change-Id: I759c3492d3bdaba67917db9ffe6685b9a5c32293

--- a/resources/ext.collection.offline/offline.less
+++ b/resources/ext.collection.offline/offline.less
@@ -59,7 +59,8 @@
 	.mw-book-tocitem-type-article,
 	.mw-book-tocitem-type-section,
 	.mw-book-tocitem-type-contributors,
-	.mw-book-tocitem-type-images {
+	.mw-book-tocitem-type-images,
+	.mw-book-tocitem-type-license {
 		break-inside: avoid;
 
 		a {
