Hygiene: One single master template simplifies rendering
* Standardise variable names
* Contributors header should be translateable

Bug: T175856
Change-Id: I9d07618d9dae027b2eadd9bc1d7d2bbe47903c5d

--- a/templates/images.mustache
+++ b/templates/images.mustache
@@ -1,4 +1,4 @@
-<h1 id="mw-book-images" data-mw-sectionnumber={{sectionNumber}}>{{headingMsg}}</h1>
+<h1 id="mw-book-images" data-mw-sectionnumber={{level}}>{{headingMsg}}</h1>
 <ul>
 	{{#images}}
 		<li>
