--- a/templates/license.mustache
+++ b/templates/license.mustache
@@ -1,4 +1,4 @@
-<h1 id="mw-book-license" data-mw-sectionnumber={{sectionNumber}}>{{headingMsg}}</h1>
+<h1 id="mw-book-license" data-mw-sectionnumber={{level}}>{{headingMsg}}</h1>
 <div>
 	{{#license}}
 		<a href="{{url}}">{{text}}</a>
