Fix table of contents font-size
Bug: T177892
Change-Id: I30480c91f08afdf4f00b508e4c34921f384acc89

--- a/resources/ext.collection.offline/offline.less
+++ b/resources/ext.collection.offline/offline.less
@@ -44,6 +44,10 @@
 		}
 	}
 
+	// FIXME: Is there any reason images, license and contributors cannot be type chapter ?
+	.mw-book-tocitem-type-images,
+	.mw-book-tocitem-type-license,
+	.mw-book-tocitem-type-contributors,
 	.mw-book-tocitem-type-chapter {
 		font-size: 140%;
 	}
