build: Bump devDependencies to latest
 eslint-config-wikimedia      0.3.0  →   0.5.0
 grunt                        1.0.1  →   1.0.2
 grunt-eslint                19.0.0  →  20.1.0
 grunt-stylelint              0.7.0  →   0.9.0
 stylelint                    7.8.0  →   8.2.0
 stylelint-config-wikimedia   0.4.1  →   0.4.2

Change-Id: Ie6795cd109d5e73d8c83ee35c1576627fdc00313

--- a/resources/ext.collection.bookcreator.styles/bookcreator.css
+++ b/resources/ext.collection.bookcreator.styles/bookcreator.css
@@ -46,7 +46,7 @@
 
 .collection-create-chapter-list {
 	padding: 10px 20px;
-	border: 1px solid rgb( 170, 170, 170 );
+	border: 1px solid #aaa;
 }
 
 .collection-create-chapter-list-text {
