Fix special page layout
Book creation form makes use of clears but makes the assumption
the skin will clear for it. This is not a good assumption to make
as we don't know in what context the book creation form will be
rendered.

Bug: T280259
Change-Id: Ic273e3963921c106c23b72d4e6f90bf5f51274a0

--- a/resources/ext.collection.bookcreator.styles/bookcreator.less
+++ b/resources/ext.collection.bookcreator.styles/bookcreator.less
@@ -1,3 +1,9 @@
+@import 'mediawiki.mixins.less';
+
+.mw-collection-container {
+	.mixin-clearfix();
+}
+
 #collectionpopup {
 	position: absolute;
 	padding: 4px;
