Remove unnecessary uses of <span class="mw-headline">
Bug: T323773
Change-Id: I4aab2e8e30b1a63d6dd6a7895b1b887fed8f6e2e

--- a/templates/download-box.mustache
+++ b/templates/download-box.mustache
@@ -1,5 +1,5 @@
 <div class="collection-column-right-box{{#sectionDisabled}} collection-box-disabled{{/sectionDisabled}}" id="coll-downloadbox">
-	<h2><span class="mw-headline">{{headline}}</span></h2>
+	<h2>{{headline}}</h2>
 	{{{description}}}
 	<form id="downloadForm" action="{{formAction}}" method="post">
 		<table style="width:100%; background-color: transparent;">
