--- a/resources/ext.collection.bookcreator.messageBox/messageBox.less
+++ b/resources/ext.collection.bookcreator.messageBox/messageBox.less
@@ -14,7 +14,7 @@
 		font-size: 13px;
 		margin-left: 1px;
 
-		&:before {
+		&::before {
 			content: '';
 			width: 20px;
 			height: 20px;
@@ -52,7 +52,7 @@
 	padding-bottom: 5px;
 
 	h5.collection-box-heading {
-		&:before {
+		&::before {
 			top: 10px;
 		}
 	}
