Replace sortable with bare bones up and down arrows
Since jquery.ui is deprecated and the extension is maintained
I think we should disable the sortable functionality
and instead use up and down arrows to provide this functionality

Bug: T49145
Change-Id: Ie6333fdac7dc9d22674eac6b23d82fd25b01f563

--- a/resources/ext.collection.bookcreator.styles/bookcreator.less
+++ b/resources/ext.collection.bookcreator.styles/bookcreator.less
@@ -136,3 +136,8 @@
 	color: @color-disabled;
 	border-color: @border-color-disabled;
 }
+
+#collectionList li:last-child .collection-down,
+#collectionList li:first-child .collection-up {
+	opacity: 0.5;
+}
